# Vending_Machine_New

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h  会员识别智能零售柜技术路线.md  软件记录.md
docs/: 无人零售终端完整技术路线.md
inc/app/: app_state.h
inc/chinese/: ui_fonts.h
inc/device/: door_manager.h  door_state.h
inc/log/: log.h
inc/member/: member_manager.h
inc/order/: order_manager.h  order_state.h
inc/product/: product_manager.h
inc/storage/: storage_manager.h
inc/ui/ui_login/: ui_login_page.h  ui_register_page.h
inc/ui/ui_order/: ui_order_page.h
inc/ui/ui_shopping/: ui_shopping_page.h
inc/ui/ui_shopping_car/: ui_shopping_car_page.h
scripts/: generate_ui_fonts.py
src/: main.c
src/app/: app_state.c
src/chinese/: font_chinese_12.c  font_chinese_16.c  ui_fonts.c
src/device/: door_manager.c  door_state.c
src/log/: log.c
src/member/: member_manager.c
src/order/: order_manager.c  order_state.c
src/product/: product_manager.c
src/storage/: storage_manager.c
src/ui/ui_login/: ui_login_page.c  ui_register_page.c
src/ui/ui_order/: ui_order_page.c
src/ui/ui_shopping/: ui_shopping_page.c
src/ui/ui_shopping_car/: ui_shopping_car_page.c
